# hackathon-hacks-ai-rzd-qna

./: .env-example  .gitignore  LICENSE  README.md  docker-compose.gpu.yml  docker-compose.yml  main_pipeline_5.ipynb
.github/workflows/: docker.yml
admin/: index.html  script.js  styles.css
bot/: Dockerfile  README.md  api.js  bot.js  config.js  package-lock.json  package.json  pyproject.toml  qna.js
bot/app/: main.py  qna.py
config/: README.md  bot-messages.yml  dicts.yaml  faq.yaml  model-config.json  profiles.json  profiles.md  prompts.yaml  rag.yaml
dataset/: Database.csv
dataset/RZD/: База знаний.csv  Положение о молодых.docx  Правила_предоставления_работникам_ОАО.docx  Условия_для_постановки_на_учет_и_предоставления_корпоративной_поддержки.DOCX
qna/: Dockerfile  README.md  pyproject.toml  requirements.txt  startup.sh
qna/app/: __init__.py  bot.py  chats.py  db.py  indexing.py  main.py  model.py  pipeline.py  pipeline5.py  profiles.py
tests/: test_main.http
tests/load/: README.md  chat.js  k6.js  profiles.js
tests/load/faq_questions/: 10_Корпоративное_волонтерство.txt  2_Отпуск.txt  3_Здоровье.txt  4_Досуг.txt  5_Семья.txt  6_КСП.txt  7_Молодежь.txt  8_Комфортные_условия.txt  9_Перед_выходом_на_пенсию.txt  questions.txt
tests/load/profiles/: profiles.json
